Update server and webpack

--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -14,7 +14,7 @@ h1, label {
 }
 
 div.app {
-  background-image: url('http://localhost:8080/assets/img/dig_back.jpg');
+  background-image: url('../assets/img/dig_back.jpg');
   background-size: cover;
   background-position: center;
 }
